pvc-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pvc-pod

spec:
  containers:
  - name: nginx
    image: nginx

    volumeMounts:
    - mountPath: /data
      name: storage

  volumes:
  - name: storage
    persistentVolumeClaim:
      claimName: meu-pvc
