volume-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: volume-pod

spec:
  containers:
  - name: nginx
    image: nginx

    volumeMounts:
    - mountPath: /data
      name: meu-volume

  volumes:
  - name: meu-volume
    emptyDir: {}
