ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: devops-app.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: devops-app
            port:
              number: 3000
